--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="ajax-loading" id="ajaxLoading" style="display:none;">
       <div class="overlay"></div>
         <div class="loading">
-          <img src="https://upload.jianshu.io/users/upload_avatars/3136195/484e32c3504a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp" />
+          <!-- <img src="https://upload.jianshu.io/users/upload_avatars/3136195/484e32c3504a.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/96/h/96/format/webp" /> -->
           <span>加载中，请稍后……</span>
         </div>
     </div>
